@@ -15,6 +15,7 @@ Version 1.11.0+svn:
    * The recruit and recall commands are restored when right-clicking on a
      leader, but with new semantics -- only that leader's recruits/recalls will
      be presented as options.
+   * The statistics window can now show per-scenario statistics.
 
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
