@@ -13,6 +13,7 @@ Version 1.11.0+svn:
      leader, but with new semantics -- only that leader's recruits/recalls will
      be presented as options.
    * Fog/shroud clearing has been reworked to be more timely and consistent.
+   * The statistics window can now show per-scenario statistics.
  * WML engine:
    * The recall, recruit, prerecall, and prerecruit events will now block
      undoing unless they contain [allow_undo].
